# ZhiQing

./: .dockerignore  .env.dev  .gitattributes  .gitignore  1_企业出题赛道-基于联通元景+Deepseek人工智能知识库的自动化构建 组织.md  Dockerfile  Dockerfile.prod  README.md  README_EN.md  docker-compose.prod.yml  docker-compose.yml  docker-deploy.sh  env.example  model_download.py  package-lock.json  pyproject.toml  quick-start.sh  requirements.txt  update_database.py  分块方式分析报告.md  系统演示视频文稿.md
account_mgt/api/: user_views.py  views.py
account_mgt/utils/: jwt_token_utils.py  pwd_utils.py
chat_mgt/api/: chat_views.py
data/: 1_企业出题赛道-基于联通元景+Deepseek人工智能知识库的自动化构建 组织.docx  test_chunking_methods.md  重庆市人民政府办公厅关于印发重庆市基层医疗卫生机构管理办法的通知.docx.docx  重庆市公共租赁住房管理办法.md  重庆市城市综合管廊管理办法 DOCX 文档.docx  重庆市城市综合管廊管理办法.doc.doc  重庆市推动优质中小企业梯度培育改革工作方案.xlsx  重庆市提振消费若干措施.doc  重庆市空气质量持续改善行动实施方案.xlsx  重庆市遏制与防治艾滋病行动计划.md
ddl/: create_database.sql
ddl/create/: create_db.sh
deploy/: deploy-frontend.sh  full-deploy.sh  nginx-frontend.conf  nginx-prod.conf  quick-deploy.sh  server-setup.sh  start_queue_management.sh  start_queue_worker.sh  stop_queue_management.sh  部署说明.md
knowledge_mgt/: admin.py  models.py  urls.py  views.py
test/: check_kb_config.py  check_users.py  create_test_task.py  create_test_user.py  debug_cancel_task.py  debug_processor_selection.py  delete_and_recreate_user.py  demo_multiformat_processing.py
zhiqing_server/: asgi.py  health_views.py  manage.py  middleware.py  settings.py  urls.py  wsgi.py
zhiqing_ui/: Dockerfile.prod  package-lock.json  package.json  vue.config.js
(+46 files in other folders)
