[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhiqing"
version = "0.0.1"
description = "基于RAG技术的智能知识管理系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "4869-yinxu", email = "4869-yinxu@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "chromadb>=0.4.0",
    "langchain>=0.1.0",
    "pypdf>=3.15.0",
    "python-docx>=0.8.11",
    "openpyxl>=3.1.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "gunicorn>=21.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/4869-yinxu/ZhiQing"
Repository = "https://github.com/4869-yinxu/ZhiQing.git"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "zhiqing_server.settings"
testpaths = ["test", "tests"]
